--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# git ls-files --others --exclude-from=.git/info/exclude
+﻿# git ls-files --others --exclude-from=.git/info/exclude
 # Lines that start with '#' are comments.
 # For a project mostly in C, the following would be a good set of
 # exclude patterns (uncomment them if you want to use them):
@@ -47,3 +47,4 @@ dependencies/
 tsumino_dir_info.json
 old_code/
 manga_db_testing.ipynb
+link_collect_resume.json
