--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 pyperclip>=1.5.25,<=1.7.0
 beautifulsoup4>=4.5.3,<=4.6.3
 flask>1.0.2,<4
-pillow>=5.3.0,<10
+pillow>=5.3.0,<10; python_version < "3.13"
+pillow>=11,<12; python_version >= "3.13"
